# models/user.go
@@ -6,29 +6,6 @@ import (
 	"github.com/jinzhu/gorm"
 )
 
-//登录
-type AuthSwag struct {
-	Username    string `json:"username"` //登录账户
-	Password    string `json:"password"` //登录密码
-	CaptchaCode string `json:"captcha_code"`
-	CaptchaId   string `json:"captcha_id"`
-}
-
-//修改密码
-type PasswordSwag struct {
-	OldPassword string `json:"old_password"` //旧密码
-	NewPassword string `json:"new_password"` //新密码
-}
-
-//注册
-type Reg struct {
-	Username      string `json:"username" binding:"required"`        //用户名
-	Password      string `json:"password"  binding:"required"`       //密码
-	PasswordAgain string `json:"password_again" binding:"required" ` //确认密码
-	CaptchaCode   string `json:"captcha_code" binding:"required"`    //验证码
-	CaptchaId     string `json:"captcha_id"  binding:"required"`     //验证码Id
-}
-
 // user 表
 type User struct {
 	Model
